--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="container">
 				<div class="jumbotron bg-dark whitetext" style="padding: 1rem 1rem">
 					<h2 style="text-align: center;">Welcome to Isekai Memories Database!</h2>
-					<p class="mb-0" style="text-align: center;">IM Database Provides you with the latest information on Tensura: Isekai Memories.</p>
+					<p class="mb-0" style="text-align: center;">IM Database Provides you with the latest information on Tensura: Isekai Memories. The site is currently under construction!</p>
 				</div>
 				<div class="jumbotron bg-dark whitetext" style="padding: 1rem 1rem">
 					<h2 style="text-align: center;">New Characters</h2>
